# picoX7

./: CMakeLists.txt  README.md  _config.yml
Source/: Synth.h  picoX7.cpp
Source/DX7/test/: testEgs.cpp
